# domashka

./: .env.template  .flake8  .gitignore  README.md  flake8  main.py  mypy.ini  pyproject.toml  ssh-keygen  ssh-keygen.pub
data/: operations.json
htmlcov/: index.html
src/: __init__.py  decorators.py  external_api.py  generators.py  logger_config.py  masks.py  masks.pyi  processing.py  transactions_reader.py  utils.py  widget.py
tests/: conftest.py  test_decorator.py  test_generators.py  test_masks.py  test_sprocessing.py  test_widget.py  tests_masks.py  tests_sprocessing.py  tests_widget.py
tests/tests/: test_external_api.py  test_logging.py  test_transactions_reader.py  test_utils.py
